/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 */
package com.github.szgabsz91.morpher.methods.lattice.impl.method;

import com.github.szgabsz91.morpher.core.io.Serializer;
import com.github.szgabsz91.morpher.core.model.AffixType;
import com.github.szgabsz91.morpher.core.model.FrequencyAwareWordPair;
import com.github.szgabsz91.morpher.core.model.Word;
import com.github.szgabsz91.morpher.core.model.WordPair;
import com.github.szgabsz91.morpher.methods.api.IMorpherMethod;
import com.github.szgabsz91.morpher.methods.api.model.MethodResponse;
import com.github.szgabsz91.morpher.methods.api.model.TrainingSet;
import com.github.szgabsz91.morpher.methods.lattice.config.LatticeMethodConfiguration;
import com.github.szgabsz91.morpher.methods.lattice.converters.LatticeMethodConverter;
import com.github.szgabsz91.morpher.methods.lattice.impl.Lattice;
import com.github.szgabsz91.morpher.methods.lattice.impl.builders.ILatticeBuilder;
import com.github.szgabsz91.morpher.methods.lattice.impl.factories.ComponentFactory;
import com.github.szgabsz91.morpher.methods.lattice.impl.nodes.Node;
import com.github.szgabsz91.morpher.methods.lattice.impl.rules.Rule;
import com.github.szgabsz91.morpher.methods.lattice.impl.trainingsetprocessor.ITrainingSetProcessor;
import com.github.szgabsz91.morpher.methods.lattice.protocolbuffers.LatticeMethodMessage;
import com.google.protobuf.Any;
import com.google.protobuf.InvalidProtocolBufferException;

import java.io.IOException;
import java.nio.file.Path;
import java.util.Optional;
import java.util.Set;

import static java.util.stream.Collectors.toSet;

/**
 * Lattice based {@link IMorpherMethod} implementation.
 *
 * @author szgabsz91
 */
public class LatticeMethod implements IMorpherMethod<LatticeMethodMessage> {

    private boolean unidirectional;
    private AffixType affixType;
    private ITrainingSetProcessor inflectionTrainingSetProcessor;
    private ILatticeBuilder inflectionLatticeBuilder;
    private ITrainingSetProcessor lemmatizationTrainingSetProcessor;
    private ILatticeBuilder lemmatizationLatticeBuilder;

    /**
     * Constructor that sets the flag that indicates if the method is unidirectional or not, the {@link AffixType}
     * this method is related to, and builds the required services based on the given configuration.
     *
     * <p>If the method is unidirectional, it can only inflect words and not lemmatize.</p>
     *
     * @param unidirectional the unidirectional flag
     * @param affixType the {@link AffixType} that this method is related to
     * @param configuration the configuration of the method
     */
    public LatticeMethod(
            final boolean unidirectional,
            final AffixType affixType,
            final LatticeMethodConfiguration configuration) {
        this.unidirectional = unidirectional;
        this.affixType = affixType;

        this.inflectionTrainingSetProcessor = ComponentFactory.createTrainingSetProcessor(
                configuration.getCostCalculatorType(),
                configuration.getCharacterRepositoryType(),
                configuration.getWordConverterType(),
                configuration.getMaximalContextSize()
        );
        this.inflectionLatticeBuilder = ComponentFactory.createLatticeBuilder(
                configuration.getLatticeBuilderType(),
                configuration.getCharacterRepositoryType(),
                configuration.getWordConverterType()
        );

        if (!unidirectional) {
            this.lemmatizationTrainingSetProcessor = ComponentFactory.createTrainingSetProcessor(
                    configuration.getCostCalculatorType(),
                    configuration.getCharacterRepositoryType(),
                    configuration.getWordConverterType(),
                    configuration.getMaximalContextSize()
            );
            this.lemmatizationLatticeBuilder = ComponentFactory.createLatticeBuilder(
                    configuration.getLatticeBuilderType(),
                    configuration.getCharacterRepositoryType(),
                    configuration.getWordConverterType()
            );
        }
    }

    private LatticeMethod(
            final AffixType affixType,
            final ITrainingSetProcessor inflectionTrainingSetProcessor,
            final ILatticeBuilder inflectionLatticeBuilder) {
        this.unidirectional = true;
        this.affixType = affixType;
        this.inflectionTrainingSetProcessor = inflectionTrainingSetProcessor;
        this.inflectionLatticeBuilder = inflectionLatticeBuilder;
    }

    private LatticeMethod(
            final AffixType affixType,
            final ITrainingSetProcessor inflectionTrainingSetProcessor,
            final ILatticeBuilder inflectionLatticeBuilder,
            final ITrainingSetProcessor lemmatizationTrainingSetProcessor,
            final ILatticeBuilder lemmatizationLatticeBuilder) {
        this.unidirectional = false;
        this.affixType = affixType;
        this.inflectionTrainingSetProcessor = inflectionTrainingSetProcessor;
        this.inflectionLatticeBuilder = inflectionLatticeBuilder;
        this.lemmatizationTrainingSetProcessor = lemmatizationTrainingSetProcessor;
        this.lemmatizationLatticeBuilder = lemmatizationLatticeBuilder;
    }

    /**
     * Returns a unidirectional {@link LatticeMethod} using the given inflection components.
     * @param affixType the {@link AffixType} that this method is related to
     * @param inflectionTrainingSetProcessor the {@link ITrainingSetProcessor} used for inflection
     * @param inflectionLatticeBuilder the {@link ILatticeBuilder} used for inflection
     * @return the newly created unidirectional {@link LatticeMethod}
     */
    public static LatticeMethod unidirectional(
            final AffixType affixType,
            final ITrainingSetProcessor inflectionTrainingSetProcessor,
            final ILatticeBuilder inflectionLatticeBuilder) {
        return new LatticeMethod(affixType, inflectionTrainingSetProcessor, inflectionLatticeBuilder);
    }

    /**
     * Returns a bidirectional {@link LatticeMethod} using the given inflection and lemmatization components.
     * @param affixType the {@link AffixType} that this method is related to
     * @param inflectionTrainingSetProcessor the {@link ITrainingSetProcessor} used for inflection
     * @param inflectionLatticeBuilder the {@link ILatticeBuilder} used for inflection
     * @param lemmatizationTrainingSetProcessor the {@link ITrainingSetProcessor} used for lemmatization
     * @param lemmatizationLatticeBuilder the {@link ILatticeBuilder} used for lemmatization
     * @return the newly created unidirectional {@link LatticeMethod}
     */
    public static LatticeMethod bidirectional(
            final AffixType affixType,
            final ITrainingSetProcessor inflectionTrainingSetProcessor,
            final ILatticeBuilder inflectionLatticeBuilder,
            final ITrainingSetProcessor lemmatizationTrainingSetProcessor,
            final ILatticeBuilder lemmatizationLatticeBuilder) {
        return new LatticeMethod(
                affixType,
                inflectionTrainingSetProcessor,
                inflectionLatticeBuilder,
                lemmatizationTrainingSetProcessor,
                lemmatizationLatticeBuilder
        );
    }

    /**
     * Returns if the method is unidirectional, meaning that it can only inflect words and not lemmatize.
     * @return true if the method is unidirectional, false otherwise
     */
    public boolean isUnidirectional() {
        return unidirectional;
    }

    /**
     * Returns the {@link AffixType} that this method relates to.
     * @return the {@link AffixType} that this method relates to
     */
    @Override
    public AffixType getAffixType() {
        return affixType;
    }

    /**
     * Returns the underlying {@link ITrainingSetProcessor} that is used for inflection.
     * @return the underlying {@link ITrainingSetProcessor} that is used for inflection
     */
    public ITrainingSetProcessor getInflectionTrainingSetProcessor() {
        return inflectionTrainingSetProcessor;
    }

    /**
     * Returns the underlying {@link ILatticeBuilder} that is used for inflection.
     * @return the underlying {@link ILatticeBuilder} that is used for inflection
     */
    public ILatticeBuilder getInflectionLatticeBuilder() {
        return inflectionLatticeBuilder;
    }

    /**
     * Returns the underlying {@link ITrainingSetProcessor} that is used for lemmatization.
     * @return the underlying {@link ITrainingSetProcessor} that is used for lemmatization
     */
    public ITrainingSetProcessor getLemmatizationTrainingSetProcessor() {
        return lemmatizationTrainingSetProcessor;
    }

    /**
     * Returns the underlying {@link ILatticeBuilder} that is used for lemmatization.
     * @return the underlying {@link ILatticeBuilder} that is used for lemmatization
     */
    public ILatticeBuilder getLemmatizationLatticeBuilder() {
        return lemmatizationLatticeBuilder;
    }

    /**
     * Returns the number of states in the FST.
     * @return the number of states in the FST
     */
    @Override
    public int size() {
        if (this.unidirectional) {
            return this.inflectionLatticeBuilder.getLattice().size();
        }

        final int inflectionLatticeSize = this.inflectionLatticeBuilder.getLattice().size();
        final int lemmatizationLatticeSize = this.lemmatizationLatticeBuilder.getLattice().size();

        return (inflectionLatticeSize + lemmatizationLatticeSize) / 2;
    }

    /**
     * Returns the optional inflection response containing the inflected forms of the given root form
     * and their probabilities.
     *
     * {@inheritDoc}
     */
    @Override
    public Optional<MethodResponse> inflect(final Word rootForm) {
        final Lattice lattice = this.inflectionLatticeBuilder.getLattice();
        final Node matchingNode = lattice.match(rootForm);
        final Rule rule = matchingNode.getRule();

        if (rule == null) {
            return Optional.empty();
        }

        return Optional.of(MethodResponse.singleton(rule.transform(rootForm)));
    }

    /**
     * Returns the optional lemmatization response, containing the root forms of the given inflected form
     * and their probabilities.
     *
     * <p>If the method is unidirectional, {@link UnsupportedOperationException} is thrown.</p>
     *
     * {@inheritDoc}
     */
    @Override
    public Optional<MethodResponse> lemmatize(final Word inflectedForm) {
        if (unidirectional) {
            throw new UnsupportedOperationException("Unidirectional Lattice method can only inflect but not lemmatize");
        }

        final Lattice lattice = this.lemmatizationLatticeBuilder.getLattice();
        final Node matchingNode = lattice.match(inflectedForm);
        final Rule rule = matchingNode.getRule();

        if (rule == null) {
            return Optional.empty();
        }

        return Optional.of(MethodResponse.singleton(rule.transform(inflectedForm)));
    }

    /**
     * Incorporates the given training set.
     *
     * {@inheritDoc}
     */
    @Override
    public void learn(final TrainingSet trainingSet) {
        final Set<WordPair> wordPairs = trainingSet.getWordPairs()
                .stream()
                .map(FrequencyAwareWordPair::getWordPair)
                .collect(toSet());
        final Set<Rule> inflectionRules = this.inflectionTrainingSetProcessor.induceRules(wordPairs);
        this.inflectionLatticeBuilder.addRules(inflectionRules);

        if (!this.unidirectional) {
            final Set<WordPair> inverseWordPairs = wordPairs
                    .stream()
                    .map(WordPair::inverse)
                    .collect(toSet());
            final Set<Rule> lemmatizationRules = this.lemmatizationTrainingSetProcessor.induceRules(inverseWordPairs);
            this.lemmatizationLatticeBuilder.addRules(lemmatizationRules);
        }
    }

    /**
     * Converts the state to a message.
     * @return the message
     */
    @Override
    public LatticeMethodMessage toMessage() {
        final LatticeMethodConverter latticeMethodConverter = new LatticeMethodConverter();
        return latticeMethodConverter.convert(this);
    }

    /**
     * Loads the state from the given message.
     * @param message the message
     */
    @Override
    public void fromMessage(final LatticeMethodMessage message) {
        final LatticeMethodConverter latticeMethodConverter = new LatticeMethodConverter();
        final LatticeMethod latticeMethod = latticeMethodConverter.convertBack(message);
        this.unidirectional = latticeMethod.isUnidirectional();
        this.affixType = latticeMethod.affixType;
        this.inflectionTrainingSetProcessor = latticeMethod.getInflectionTrainingSetProcessor();
        this.inflectionLatticeBuilder = latticeMethod.inflectionLatticeBuilder;
        this.lemmatizationTrainingSetProcessor = latticeMethod.getLemmatizationTrainingSetProcessor();
        this.lemmatizationLatticeBuilder = latticeMethod.getLemmatizationLatticeBuilder();
    }

    /**
     * Loads the state from the given message.
     * @param message the message
     * @throws InvalidProtocolBufferException if the provided message is not an {@link LatticeMethodMessage}
     */
    @Override
    public void fromMessage(final Any message) throws InvalidProtocolBufferException {
        if (!message.is(LatticeMethodMessage.class)) {
            throw new InvalidProtocolBufferException("The provided message is not a LatticeMethodMessage: " + message);
        }

        final LatticeMethodMessage latticeMethodMessage = message.unpack(LatticeMethodMessage.class);
        this.fromMessage(latticeMethodMessage);
    }
    
    /**
     * Saves the method state to the given file.
     *
     * {@inheritDoc}
     */
    @Override
    public void saveTo(final Path file) throws IOException {
        final LatticeMethodConverter latticeMethodConverter = new LatticeMethodConverter();
        final Serializer<LatticeMethod, LatticeMethodMessage> serializer =
                new Serializer<>(latticeMethodConverter, this);
        serializer.serialize(this, file);
    }

    /**
     * Loads the method state from the given file.
     *
     * {@inheritDoc}
     */
    @Override
    public void loadFrom(final Path file) throws IOException {
        final LatticeMethodConverter latticeMethodConverter = new LatticeMethodConverter();
        final Serializer<LatticeMethod, LatticeMethodMessage> serializer =
                new Serializer<>(latticeMethodConverter, this);
        final LatticeMethod latticeMethod = serializer.deserialize(file);
        this.unidirectional = latticeMethod.isUnidirectional();
        this.affixType = latticeMethod.affixType;
        this.inflectionTrainingSetProcessor = latticeMethod.getInflectionTrainingSetProcessor();
        this.inflectionLatticeBuilder = latticeMethod.inflectionLatticeBuilder;
        this.lemmatizationTrainingSetProcessor = latticeMethod.getLemmatizationTrainingSetProcessor();
        this.lemmatizationLatticeBuilder = latticeMethod.getLemmatizationLatticeBuilder();
    }

}
